# virt-customize-ansible-modules

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
ansible/module_utils/: virt_customize.py
ansible/module_utils/libguestfs/: libguestfs.py
ansible/modules/cloud/libguestfs/: virt_customize_package.py  virt_customize_user.py
ansible/modules/cloud/misc/: virt_customize_command.py  virt_customize_download.py  virt_customize_package.py  virt_customize_user.py
ansible/modules/virt_customize/: virt_customize_command.py  virt_customize_download.py  virt_customize_package.py  virt_customize_packages.py  virt_customize_upload.py  virt_customize_user.py  virt_customize_users.py
docs/: README.md
docs/samples/: main.yml
examples/: README.md
module_utils/: virt_customize.py
