[metadata]
name = virt-customize-ansible-modules
summary = Ansible modules that perform libguestfs actions
description-file =
    README.md
author = 'Vadim Khitrin'
author-email = 'me@vkhitrin.com'
home-page = 'https://github.com/vkhitrin/virt-customize-ansible-modules'
project_urls =
    Source Code = 'https://github.com/vkhitrin/virt-customize-ansible-modules'
license = GPLv3+
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages = 
    ansible
data_files =
    module_utils = ansible/module_utils/*
    modules = ansible/modules/*
